[package]
name = "wjp"
version = "1.1.2"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards JSON Parser"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wjp"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wjp"
exclude = ["src/test.rs", ".github/", "sonar-project.properties"]

[dependencies]
